# Customer-Cluster

./: README.md  app.py  config.yaml  constants.py  pyproject.toml  requirements.txt  rfm_analysis.py
data/: rfm_scored.csv  segment_summary.csv
tests/: conftest.py  test_config.py  test_constants.py  test_rfm.py
